// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  padding: 1.25em;
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Recusandae quo mollitia est reiciendis sunt odio fuga. Non eaque sequi voluptas accusantium occaecati quia consequatur. Minima ut sed aut assumenda quo illo sed unde repellendus. Quam est est non odit architecto omnis ad quas. Ipsam voluptas repudiandae animi nihil fugiat omnis eveniet et aut.
 
Qui eos veniam quasi aut architecto et perferendis sed ut. Explicabo numquam voluptas eum. Recusandae corrupti nostrum ut quis ex quos aliquam. Voluptates mollitia est. Accusantium consequatur praesentium aperiam veniam nobis doloremque optio rerum.
 
Quam sit dolor quibusdam quo quia accusantium nemo aspernatur. At reiciendis nihil cupiditate deleniti tenetur qui necessitatibus rerum sint. Quis sit impedit in blanditiis ut. Quod doloribus perspiciatis est minus suscipit animi. Asperiores amet modi. Est esse ut et numquam recusandae mollitia.
 
Eos repudiandae a consequatur a. Eaque et inventore nostrum consequatur et enim consequatur illo voluptate. Qui ex rerum tenetur nam.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget editable header 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  padding: 1.25em;
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  padding: 0;
  outline-offset: 9px;
}

.c3:hover {
  outline: 1px solid rgba(var(--focus-color),0.5);
}

.c3:focus {
  outline: 1px solid rgba(var(--focus-color),1);
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2 c3"
      onChange={[Function]}
      placeholder="placeholder"
      type="header"
      value="edit me"
    />
    <p
      className="c4"
    >
      Molestiae quos veritatis. Fugit aut perferendis aliquam itaque reprehenderit. Labore voluptatibus nobis qui doloribus sunt dolor voluptatem qui ratione. Dolorum inventore hic eos. Recusandae et necessitatibus nisi nostrum quas rerum harum. Qui iusto molestiae totam nulla et provident nesciunt voluptas.
 
Ut quod perferendis. Tempore ea omnis quia. Voluptatem dolor quasi ratione aliquid.
 
Nostrum consequatur adipisci cumque dicta laboriosam accusamus sit dicta facilis. Rerum sed qui aut saepe iste qui et. Eos recusandae laboriosam vel accusantium consequatur.
 
Aut esse accusamus. Libero velit consequatur fuga eveniet suscipit blanditiis at iste. Molestias sit eligendi voluptatum nobis non occaecati illo eum iste. Neque dolorem dolorem veniam vel dolor earum. Voluptate quod quam quaerat eum culpa architecto tenetur ipsam vitae. Vitae atque dolorum.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  padding: 1.25em;
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Minima qui quas qui. Itaque aut nihil possimus odio at et nulla. Necessitatibus vel eum. Dignissimos in aut voluptates tempora explicabo ut perspiciatis veniam ducimus.
 
Necessitatibus perspiciatis et eligendi sequi assumenda aut. Harum ea non natus nisi. Nesciunt totam dignissimos dolores vitae ut dolorem amet velit deserunt. Assumenda sunt quam officiis eos et quos et. Aperiam sed sint facilis eos consequuntur. Repellendus aut voluptatem magnam ut modi dolorem quae saepe aut.
 
Dicta quae aliquam minima ea rerum. Exercitationem minima enim suscipit deserunt quos vel enim. Corrupti dolores perspiciatis harum consequatur aliquid nisi quis. Dolores neque itaque sed aut. Itaque eos amet fugiat recusandae ex itaque quas. Ea ad at omnis delectus.
 
Dignissimos et amet qui rerum enim quos natus. Quisquam facilis reiciendis atque eligendi delectus enim qui quia harum. Distinctio et iusto.
    </p>
  </div>
</div>
`;
